Fix too long Select2 input

--- a/resources/styles/forms.less
+++ b/resources/styles/forms.less
@@ -52,3 +52,10 @@
   font-size: 15px;
   line-height: 15px;
 }
+
+
+// For some odd reason, these had fixed min-style:600px
+// That sucks. Removing it at HitchwikiVector/resources/js/ext.HitchwikiVector.js
+.sf-select2-container {
+  width: 285px;
+}
